cmake_minimum_required(VERSION 3.12)
project(cpp_yellow)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -Wextra -pedantic -O0")

message("CMAKE_CXX_FLAGS_DEBUG:  ${CMAKE_CXX_FLAGS_DEBUG}")

add_executable(cpp_yellow main.cpp)
add_executable(week_1_assignment_1 week_1/assignment_1/temperature.cpp)
add_executable(week_1_assignment_2 week_1/assignment_2/block_weight.cpp)
add_executable(week_1_assignment_3 week_1/assignment_3/find_max_repetition_count.cpp)
add_executable(week_1_assignment_4 week_1/assignment_4/team_tasks.cpp)
add_executable(week_1_assignment_5 week_1/assignment_5/sqr_all.cpp)
add_executable(week_1_assignment_6 week_1/assignment_6/element_reference.cpp)
add_executable(week_2_assignment_1 week_2/assignment_1/solution.cpp)
add_executable(week_2_assignment_2 week_2/assignment_2/test_equation.cpp)
add_executable(week_2_assignment_3 week_2/assignment_3/test_person.cpp)
add_executable(week_2_assignment_4 week_2/assignment_4/test_rational.cpp)
add_executable(week_2_assignment_5 week_2/assignment_5/test_palindrom.cpp)
add_executable(week_3_assignment_1 week_3/assignment_1/sum_reverse_sort.cpp)