cmake_minimum_required(VERSION 3.12)
project(cpp_yellow)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -Wextra -pedantic -O0")

message("CMAKE_CXX_FLAGS_DEBUG:  ${CMAKE_CXX_FLAGS_DEBUG}")

add_executable(cpp_yellow main.cpp week_3/assignment_3/rectangle.h)
add_executable(week_1_assignment_1 week_1/assignment_1/temperature.cpp)
add_executable(week_1_assignment_2 week_1/assignment_2/block_weight.cpp)
add_executable(week_1_assignment_3 week_1/assignment_3/find_max_repetition_count.cpp)
add_executable(week_1_assignment_4 week_1/assignment_4/team_tasks.cpp)
add_executable(week_1_assignment_5 week_1/assignment_5/sqr_all.cpp)
add_executable(week_1_assignment_6 week_1/assignment_6/element_reference.cpp)
add_executable(week_2_assignment_1 week_2/assignment_1/solution.cpp)
add_executable(week_2_assignment_2 week_2/assignment_2/test_equation.cpp)
add_executable(week_2_assignment_3 week_2/assignment_3/test_person.cpp)
add_executable(week_2_assignment_4 week_2/assignment_4/test_rational.cpp)
add_executable(week_2_assignment_5 week_2/assignment_5/test_palindrom.cpp)
add_executable(week_3_assignment_1 week_3/assignment_1/sum_reverse_sort.cpp)
add_executable(week_3_assignment_2 week_3/assignment_2/phone_number.cpp)
add_executable(week_3_assignment_4 week_3/assignment_4/query.cpp week_3/assignment_4/main.cpp week_3/assignment_4/responses.cpp week_3/assignment_4/responses.h week_3/assignment_4/bus_manager.cpp week_3/assignment_4/bus_manager.h)
add_executable(week_4_assignment_1 week_4/assignment_1/print_vector_part.cpp)
add_executable(week_4_assignment_2 week_4/assignment_2/find_greater_elements.cpp)
add_executable(week_4_assignment_3 week_4/assignment_3/split_into_words.cpp)
add_executable(week_4_assignment_4 week_4/assignment_4/remove_duplicates.cpp)
add_executable(week_4_assignment_5 week_4/assignment_5/print_permutations.cpp)
add_executable(week_4_assignment_6 week_4/assignment_6/print_stats.cpp)
add_executable(week_4_assignment_7_1 week_4/assignment_7/merge_sort_div2.cpp)
add_executable(week_4_assignment_7_2 week_4/assignment_7/merge_sort_div3.cpp)
add_executable(week_4_assignment_8 week_4/assignment_8/find_nearest_element.cpp)
add_executable(week_4_assignment_9 week_4/assignment_9/person_names.cpp)
add_executable(week_4_assignment_10_1 week_4/assignment_10/find_starts_with_char.cpp)
add_executable(week_4_assignment_10_2 week_4/assignment_10/find_starts_with_string.cpp)
add_executable(week_4_assignment_11_1 week_4/assignment_11/build_expression.cpp)
add_executable(week_4_assignment_11_2 week_4/assignment_11/build_expression_without_redundant_parentheses.cpp)
add_executable(week_5_assignment_1 week_5/assignment_1/inheritance.cpp)
add_executable(week_5_assignment_2 week_5/assignment_2/figures.cpp)
add_executable(week_5_assignment_3 week_5/assignment_3/notifiers.cpp)
add_executable(final_assignment final_assignment/course_project_yellow.cpp)